A bit of styling

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -282,4 +282,8 @@ import ContactForm from "../components/ContactForm";
   .social-links a:hover {
     color: #222;
   }
+
+  .social-links svg {
+    display: block;
+  }
 </style>
